--- a/footer.html
+++ b/footer.html
@@ -43,7 +43,7 @@
             <form class="nyhed">
                 <h1>NYHEDSBREV</h1>
                 <input id="email" type="text" placeholder="EMAIL" required><br>
-                <input id="send" type="submit" value="SEND">
+                <input id="tilmeld" type="submit" value="TILMELD">
 
 
             </form>
