padding og margin ændrringer

--- a/header.html
+++ b/header.html
@@ -23,7 +23,7 @@
 
         <div class="punkter">
             <a href="smykker.html">SMYKKER</a>
-            <a href="vaerkstedet.html">VÆRKSTED</a>
+            <a href="vaerkstedet.html">BUTIKKEN</a>
             <a href="om.html">OM MARYLOU</a>
             <a href="kontakt.html">KONTAKT</a>
         </div>
@@ -42,7 +42,7 @@
         <div class="punkter">
 
             <a href="smykker.html">SMYKKER</a>
-            <a href="vaerkstedet.html">VÆRKSTED</a>
+            <a href="vaerkstedet.html">BUTIKKEN</a>
             <a href="om.html">OM MARYLOU</a>
             <a href="kontakt.html">KONTAKT</a>
         </div>
