--- a/footer.html
+++ b/footer.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Om side som omhandler Marylou Jewerllery">
+    <meta name="description" content="Praktisk information Marylou Jewerllery">
     <link rel="stylesheet" href="footer.css" type="text/css">
     <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.5.0/css/all.css' integrity='sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU' crossorigin='anonymous'>
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
@@ -13,24 +13,22 @@
 
 <body>
     <footer>
+        <!--Sektion til info med de forskellige betingelser som linker videre til hver deres side med mere info-->
         <section id="info">
             <h1>INFO</h1>
             <div><a href="handel.html">Handelsbetingelser</a></div>
             <div><a href="levering.html">Levering</a></div>
             <div><a href="retur.html">Returnering</a></div>
-
         </section>
-
+        <!--Sektion til MaryLou Jewellerys kontakt informationer-->
         <section id="Mary">
             <h1>MARYLOU JEWELLERY</h1>
-            <p>
-                Gammel Kongevej 101<br> 1850 Frederiksberg<br> Tlf: +45 22287854<br> Mail: maryloujewellery@mail.com<br>
+            <p>Gammel Kongevej 101<br> 1850 Frederiksberg<br> Tlf: +45 22287854<br> Mail: maryloujewellery@mail.com<br>
             </p>
             <p>Åbningstider:<br> Mandag lukket<br> Tirsdag-fredag 11-17.30<br> Lørdag 11-14<br>
-
             </p>
         </section>
-
+        <!--Sektion til SoMe ikoner. Ikonerne er hentet fra w3Schools som er vist i <head>HUSK AT LINKE SIMONE!!!-->
         <section id="folg">
             <h1>FØLG MARYLOU JEWELLERY</h1>
             <div class="soME"><a href="https://www.facebook.com/MaryLou-Jewellery-1611072669123272/?fref=ts">
@@ -38,19 +36,14 @@
             <div class="soME"><a href="https://www.instagram.com/marylou_jewellery/">
                 <i class="fab fa-instagram" style="font-size: 24px; color: black;"></i></a></div>
         </section>
-
+        <!--Sektion til tilmelding af nyhedsbrev det er en produtype så derfor kan emailen ikke sendes ind-->
         <section id="nyhedsbrev">
             <form class="nyhed">
                 <h1>NYHEDSBREV</h1>
                 <input id="email" type="text" placeholder="EMAIL" required><br>
                 <input id="tilmeld" type="submit" value="TILMELD">
-
-
             </form>
-
-
         </section>
-
     </footer>
 </body>
 </html>
