--- a/retur.html
+++ b/retur.html
@@ -7,19 +7,19 @@
     <link rel="stylesheet" href="betingelser.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-    <title>Handelsbetingelser</title>
+    <title>Returnering</title>
 </head>
 
 <body>
     <main>
+        <!--Template til indholdet på retur siden, som skal bruges i javascript for at hente det dynamiske indhold ved hjælp af en json fil fra wordpress-->
     <section id="container" class="data-container"></section>
         <template class="data-template">
         <article class="wpPage">
             <h1 class="data-title"></h1>
             <p class="data-text"></p>
-            </article>
-                 </template>
-
+        </article>
+        </template>
     </main>
 
     <script>
@@ -54,6 +54,5 @@
         }
 
     </script>
-
 </body>
 </html>
