--- a/kontakt.html
+++ b/kontakt.html
@@ -14,7 +14,7 @@
     <main>
 
         <section id="main_grid">
-            <!--Templates til indholdet på om siden, som skal bruges i javascript for at hente det dynamiske indhold ved hjælp af en json fil fra wordpress-->
+            <!--Template til indholdet på kontakt siden, som skal bruges i javascript for at hente det dynamiske indhold ved hjælp af en json fil fra wordpress-->
             <section id="container" class="data-container"></section>
             <template class="data-template">
         <article class="wpPage">
@@ -23,16 +23,15 @@
             </article>
                  </template>
 
+            <!--Template til kortet på kontakt siden samt en iframe med kort fra google maps-->
             <section id="container1" class="data-container1">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8999.202945179293!2d12.53812116172245!3d55.67506515839277!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465253a1b0d9261d%3A0xff2d681764e8b880!2sMaryLou+Jewellery!5e0!3m2!1sda!2sdk!4v1545150502820" width="700" height="700" frameborder="0" style="border:0" allowfullscreen></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8999.202945179293!2d12.53812116172245!3d55.67506515839277!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465253a1b0d9261d%3A0xff2d681764e8b880!2sMaryLou+Jewellery!5e0!3m2!1sda!2sdk!4v1545150502820" width="700" height="700" frameborder="0" style="border:0" allowfullscreen></iframe>
             </section>
 
         </section>
     </main>
 
     <!--<?php include "footer.html;?>-->
-
-
 
     <script>
         //Hent Json filen når DOM er loaded
@@ -43,19 +42,11 @@
         let pageTemplate = document.querySelector(".data-template");
         let pageContainer = document.querySelector(".data-container");
 
-      /*  let map;
-        let mapTemplate = document.querySelector(".data-template1");
-        let mapContainer = document.querySelector(".data-container1");*/
-
         //Hent Json filen ind
         async function hentJson() {
             let jsonData = await fetch("https://camilla-pedersen.dk/kea/MaryLou/wordpress/wp-json/wp/v2/pages?slug=kontakt");
             pages = await jsonData.json();
             visPage();
-
-          /*  let jsonData1 = await fetch("https://camilla-pedersen.dk/kea/MaryLou/wordpress/wp-json/wp/v2/pages?slug=map-2");
-            map = await jsonData1.json();
-            visMap();*/
         }
 
         function visPage() {
@@ -71,23 +62,6 @@
                 pageContainer.appendChild(klon);
             })
         }
-
-    /*    function visMap() {
-            console.log(map);
-
-            //Løb json filen igennem
-            map.forEach(map => {
-                let klon = mapTemplate.cloneNode(true).content;
-                klon.querySelector(".data-title1").textContent = map.title.rendered;
-                klon.querySelector(".data-text1").innerHTML = map.content.rendered;
-
-                //Placer klonen i HTML
-                mapContainer.appendChild(klon);
-            })
-        }*/
     </script>
-
-
-
 </body>
 </html>
