--- a/om.html
+++ b/om.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Om side som omhandler Marylou Jewerllery og hvor hendes inspiration til at lave smykker kommer fra">
     <link rel="stylesheet" href="om.css" type="text/css">
-    <!--    link til icon-->
+    <!--    link til ikonet (pilen der fører til top) https://www.w3schools.com/icons/tryit.asp?icon=fas_fa-arrow-up&unicon=f062-->
     <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.5.0/css/all.css' integrity='sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU' crossorigin='anonymous'>
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
@@ -15,34 +15,24 @@
 <body>
     <!--    <?php include "header.html";?>-->
     <main>
-        <!--Template til indholdet på om siden, som skal bruges i javascript for at hente det dynamiske indhold ved hjælp af en json fil fra wordpress-->
+        <!--Templates til indholdet på om siden, som skal bruges i javascript for at hente det dynamiske indhold ved hjælp af en json fil fra wordpress-->
         <section id="container" class="data-container"></section>
         <template class="data-template">
         <article class="wpPage">
             <h1 class="data-title"></h1>
             <p class="data-text"></p>
-            </article>
-                 </template>
-
+        </article>
+        </template>
 
         <section id="container1" class="data-container1"></section>
         <template class="data-template1">
         <article class="wpPage">
             <h1 class="data-title1"></h1>
             <p class="data-text1"></p>
-            </article>
-                 </template>
+        </article>
+        </template>
 
-
-
-        <!--<section id="container2" class="data-container2"></section>
-        <template class="data-template2">
-        <article class="wpPage">
-            <h1 class="data-title2"></h1>
-            <p class="data-text2"></p>
-            </article>
-                 </template>-->
-
+        <!--Function der skal gøre at når man klikker på ikonet som er en pil der pejer opad bliver man ført til toppen af siden. Samt styling af ikonet. Der er linket til ikonet oppe i <head> da det er hentet fra w3schools-->
         <div onclick="topFunction()"> <i style='font-size:24px' class='fas'>&#xf062;</i></div>
 
     </main>
@@ -62,10 +52,6 @@
         let billedeTemplate = document.querySelector(".data-template1");
         let billedeContainer = document.querySelector(".data-container1");
 
-        /*let text;
-        let textTemplate = document.querySelector(".data-template2");
-        let textContainer = document.querySelector(".data-container2");*/
-
         //Hent Json filen ind
         async function hentJson() {
             let jsonData = await fetch("https://camilla-pedersen.dk/kea/MaryLou/wordpress/wp-json/wp/v2/pages?slug=marylou-jewellery");
@@ -75,10 +61,6 @@
             let jsonData1 = await fetch("https://camilla-pedersen.dk/kea/MaryLou/wordpress/wp-json/wp/v2/pages?slug=776-2");
             billede = await jsonData1.json();
             visBillede();
-
-            /* let jsonData2 = await fetch("https://camilla-pedersen.dk/kea/MaryLou/wordpress/wp-json/wp/v2/pages?slug=132-2");
-             text = await jsonData2.json();
-             visText();*/
         }
 
         function visPage() {
@@ -108,22 +90,7 @@
             })
         }
 
-        /* function visText() {
-             console.log(text);
-
-             //Løb json filen igennem
-             text.forEach(text => {
-                 let klon = textTemplate.cloneNode(true).content;
-                 klon.querySelector(".data-title2").textContent = text.title.rendered;
-                 klon.querySelector(".data-text2").innerHTML = text.content.rendered;
-
-                 //Placer klonen i HTML
-                 textContainer.appendChild(klon);
-             })
-         }*/
-
-
-
+        /*JAVASCRIPT TIL IKONET DER SKAL FØRER TIL TOPPEN AF SITET NÅR DER KLIKKES - HJÆLP FRA w3schools https://www.w3schools.com/howto/howto_js_scroll_to_top.asp*/
         //når siden er loaded skal top iconet gemmes indtil der scrolles
         document.addEventListener("DOMContentLoaded", gem);
 
