--- a/om.html
+++ b/om.html
@@ -32,7 +32,7 @@
         </article>
         </template>
 
-        <!--Function der skal gøre at når man klikker på ikonet som er en pil der pejer opad bliver man ført til toppen af siden. Samt styling af ikonet. Der er linket til ikonet oppe i <head> da det er hentet fra w3schools-->
+        <!--Function der skal gøre at når man klikker på ikonet som er en pil der pejer opad bliver man ført til toppen af siden. Samt styling af ikonet - w3schools - https://www.w3schools.com/icons/tryit.asp?icon=fas_fa-arrow-up&unicon=f062  -->
         <div onclick="topFunction()"> <i style='font-size:24px' class='fas'>&#xf062;</i></div>
 
     </main>
