style rettelser og kommentarer

--- a/footer.html
+++ b/footer.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Praktisk information Marylou Jewerllery">
     <link rel="stylesheet" href="footer.css" type="text/css">
+   <!-- Det nedstående link rel bruges for at hente SoMe ikonerne ind fra w3schools-->
     <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.5.0/css/all.css' integrity='sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU' crossorigin='anonymous'>
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
@@ -28,7 +29,8 @@
             <p>Åbningstider:<br> Mandag lukket<br> Tirsdag-fredag 11-17.30<br> Lørdag 11-14<br>
             </p>
         </section>
-        <!--Sektion til SoMe ikoner. Ikonerne er hentet fra w3Schools som er vist i <head>HUSK AT LINKE SIMONE!!!-->
+        <!--Sektion til SoMe ikoner. Ikonerne er hentet fra w3Schools Facebook: https://www.w3schools.com/icons/tryit.asp?icon=fab_fa-facebook-f&unicon=f39e
+        Instagram: https://www.w3schools.com/icons/tryit.asp?icon=fab_fa-instagram&unicon=f16d-->
         <section id="folg">
             <h1>FØLG MARYLOU JEWELLERY</h1>
             <div class="soME"><a href="https://www.facebook.com/MaryLou-Jewellery-1611072669123272/?fref=ts">
